// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items Component disable charts it renders the default widget 1`] = `
<ThemeProvider
  theme={[Function]}
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <StatItemsComponent
      description="HOSTS"
      fields={
        Array [
          Object {
            "color": "#3185FC",
            "icon": "cross",
            "key": "hosts",
            "value": null,
          },
        ]
      }
      from={1560578400000}
      id="statItems"
      index={0}
      key="mock-keys"
      narrowDateRange={[MockFunction]}
      to={1560837600000}
    >
      <FlexItem
        data-test-subj="stat-item"
      >
        <EuiFlexItem
          className="sc-AykKG krmHWP"
          data-test-subj="stat-item"
        >
          <div
            className="euiFlexItem sc-AykKG krmHWP"
            data-test-subj="stat-item"
          >
            <EuiPanel
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="euiPanel euiPanel--paddingMedium"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <EuiFlexGroup
                  gutterSize="none"
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <EuiFlexItem>
                      <div
                        className="euiFlexItem"
                      >
                        <EuiTitle
                          size="xxxs"
                        >
                          <h6
                            className="euiTitle euiTitle--xxxsmall"
                          >
                            HOSTS
                          </h6>
                        </EuiTitle>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <Connect(InspectButtonComponent)
                          inspectIndex={0}
                          queryId="statItems"
                          show={false}
                          title="KPI HOSTS"
                        >
                          <InspectButtonComponent
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <InspectContainer
                              data-test-subj="transparent-inspect-container"
                              showInspect={false}
                            >
                              <div
                                className="sc-AykKF cUIXEb"
                                data-test-subj="transparent-inspect-container"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </InspectContainer>
                          </InspectButtonComponent>
                        </Connect(InspectButtonComponent)>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <FlexItem
                      key="stat-items-field-hosts"
                    >
                      <EuiFlexItem
                        className="sc-AykKG krmHWP"
                      >
                        <div
                          className="euiFlexItem sc-AykKG krmHWP"
                        >
                          <EuiFlexGroup
                            alignItems="center"
                            gutterSize="m"
                            responsive={false}
                          >
                            <div
                              className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              <FlexItem>
                                <EuiFlexItem
                                  className="sc-AykKG krmHWP"
                                >
                                  <div
                                    className="euiFlexItem sc-AykKG krmHWP"
                                  >
                                    <StatValue>
                                      <EuiTitle
                                        className="sc-AykKH eSsePF"
                                      >
                                        <p
                                          className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                          data-test-subj="stat-title"
                                        >
                                          <EmptyWrapper>
                                            <span
                                              className="sc-AykKC bGtoQZ"
                                            >
                                              —
                                            </span>
                                          </EmptyWrapper>
                                           
                                        </p>
                                      </EuiTitle>
                                    </StatValue>
                                  </div>
                                </EuiFlexItem>
                              </FlexItem>
                            </div>
                          </EuiFlexGroup>
                        </div>
                      </EuiFlexItem>
                    </FlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  />
                </EuiFlexGroup>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </FlexItem>
    </StatItemsComponent>
  </Provider>
</ThemeProvider>
`;

exports[`Stat Items Component disable charts it renders the default widget 2`] = `
<ThemeProvider
  theme={[Function]}
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <StatItemsComponent
      areaChart={Array []}
      barChart={Array []}
      description="HOSTS"
      fields={
        Array [
          Object {
            "color": "#3185FC",
            "icon": "cross",
            "key": "hosts",
            "value": null,
          },
        ]
      }
      from={1560578400000}
      id="statItems"
      index={0}
      key="mock-keys"
      narrowDateRange={[MockFunction]}
      to={1560837600000}
    >
      <FlexItem
        data-test-subj="stat-item"
      >
        <EuiFlexItem
          className="sc-AykKG krmHWP"
          data-test-subj="stat-item"
        >
          <div
            className="euiFlexItem sc-AykKG krmHWP"
            data-test-subj="stat-item"
          >
            <EuiPanel
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="euiPanel euiPanel--paddingMedium"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <EuiFlexGroup
                  gutterSize="none"
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <EuiFlexItem>
                      <div
                        className="euiFlexItem"
                      >
                        <EuiTitle
                          size="xxxs"
                        >
                          <h6
                            className="euiTitle euiTitle--xxxsmall"
                          >
                            HOSTS
                          </h6>
                        </EuiTitle>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <Connect(InspectButtonComponent)
                          inspectIndex={0}
                          queryId="statItems"
                          show={false}
                          title="KPI HOSTS"
                        >
                          <InspectButtonComponent
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <InspectContainer
                              data-test-subj="transparent-inspect-container"
                              showInspect={false}
                            >
                              <div
                                className="sc-AykKF cUIXEb"
                                data-test-subj="transparent-inspect-container"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </InspectContainer>
                          </InspectButtonComponent>
                        </Connect(InspectButtonComponent)>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <FlexItem
                      key="stat-items-field-hosts"
                    >
                      <EuiFlexItem
                        className="sc-AykKG krmHWP"
                      >
                        <div
                          className="euiFlexItem sc-AykKG krmHWP"
                        >
                          <EuiFlexGroup
                            alignItems="center"
                            gutterSize="m"
                            responsive={false}
                          >
                            <div
                              className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              0
                              <FlexItem>
                                <EuiFlexItem
                                  className="sc-AykKG krmHWP"
                                >
                                  <div
                                    className="euiFlexItem sc-AykKG krmHWP"
                                  >
                                    <StatValue>
                                      <EuiTitle
                                        className="sc-AykKH eSsePF"
                                      >
                                        <p
                                          className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                          data-test-subj="stat-title"
                                        >
                                          <EmptyWrapper>
                                            <span
                                              className="sc-AykKC bGtoQZ"
                                            >
                                              —
                                            </span>
                                          </EmptyWrapper>
                                           
                                        </p>
                                      </EuiTitle>
                                    </StatValue>
                                  </div>
                                </EuiFlexItem>
                              </FlexItem>
                            </div>
                          </EuiFlexGroup>
                        </div>
                      </EuiFlexItem>
                    </FlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  />
                </EuiFlexGroup>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </FlexItem>
    </StatItemsComponent>
  </Provider>
</ThemeProvider>
`;

exports[`Stat Items Component rendering kpis with charts it renders the default widget 1`] = `undefined`;
